<resources>
    <string name="app_name">Alma</string>
    <string name="developer">Developed by Huey Kim</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_incorrect">Username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">Overview</string>
    <string name="save_username">Save Username</string>
    <string name="auto_login">Auto Login</string>
    <string name="alma_logo_content_description">Alma logo image</string>
    <string name="name">Hwuiwon (Huey) Kim</string>
    <string name="role">Student</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alma_logo_content_description">Alma logo image</string>
    <string name="save_username">Save Username</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_more_overview">MoreOverviewActivity</string>
    <string name="title_activity_directory">DirectoryActivity</string>
    <string name="title_home">Grades</string>
    <string name="title_assignments">Assignments</string>
    <string name="directoryHint">Who are you searching?</string>
    <string name="search">Search</string>

    <string name="ovString1">P1</string>
    <string name="ovString2">AP Physics 1</string>
    <string name="ovString3">A+</string>
    <string name="ovString4">Room 9</string>

    <string name="amString1">Final Exam</string>
    <string name="amString2">5/30/17</string>
    <string name="amString3">Final Draft of DOAS Essay Due</string>
    <string name="amString4">
        1 hour to work on it QUIETLY in class.
        Submit to turnitin.com
        Remaining time to be used preparing for upcoming exams.
    </string>

    <string name="drString1">Gregoire Alcouffe</string>
    <string name="drString2">galcouffe@stpaulseoul.com</string>
    <string name="directory_image_content_description">Profile picture of a person</string>
    <string name="moview_class_name">Class Name</string>
    <string name="moview_grades">Grades</string>
    <string name="moview_alphabet_grade">A+</string>
    <string name="grade_assignment_title">Final Draft of DOAS Essay Due</string>
    <string name="grade_assignment_grade">A</string>
    <string name="grade_assignment_grade_percentage">(95%)</string>
    <string name="grade_updated_date">Updated at 6/3/17</string>
    <string name="grade_weight">10%</string>
</resources>