<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">
    <TextView
        android:id="@+id/overviewTV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ovString1"
        android:textSize="50px"
        android:textStyle="bold"
        android:textColor="@color/jet"
        android:paddingRight="@dimen/overview_margin" />
    <TextView
        android:id="@+id/overviewTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ovString2"
        android:textSize="50px"
        android:textColor="@color/jet"
        android:layout_toEndOf="@+id/overviewTV1" />
    <TextView
        android:id="@+id/overviewTV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ovString3"
        android:layout_alignParentRight="true"
        android:textSize="50px"
        android:textStyle="bold"
        android:textColor="@color/jet"/>
</RelativeLayout>