<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/directoryIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sample"
        android:contentDescription="@string/directory_image_content_description" />

    <TextView
        android:id="@+id/directoryTV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drString1"
        android:textSize="24sp"
        android:textColor="@color/jet"
        android:textStyle="bold"
        android:layout_toEndOf="@id/directoryIV"
        android:layout_marginStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin2"/>

    <TextView
        android:id="@+id/directoryTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drString2"
        android:textSize="19sp"
        android:textColor="@color/jet"
        android:layout_marginStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin4"
        android:layout_below="@id/directoryTV1"
        android:layout_toEndOf="@id/directoryIV" />

</RelativeLayout>