<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hwuiwon.alma.MoreOverviewActivity"
    android:background="@color/almaPrimary">

    <ProgressBar
        android:id="@+id/more_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/classNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/almaPrimary"
        android:paddingBottom="8dp"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:text="@string/moview_class_name"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currentMenuTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moview_grades"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingStart="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:layout_below="@id/classNameTV"
        android:background="@color/almaPrimary"/>

    <TextView
        android:id="@+id/gradeTV"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:elevation="24dp"
        android:padding="@dimen/activity_margin"
        android:text="@string/moview_alphabet_grade"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/moreOverviewLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentMenuTV"
        android:layout_above="@+id/navigation"
        android:background="@color/color_testing"
        android:divider="@color/almaPrimary"
        android:dividerHeight="1dp">
    </ListView>

    <android.support.design.widget.BottomNavigationView
        android:id="@id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Alma.Navigation"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/menu_text_color_inverse"
        app:itemBackground="@drawable/menu_background_color_inverse" />

</RelativeLayout>